tests/rosetta/out/Fortran/additive-primes.error
gfortran: exit status 1
/tmp/additive-primes.f90:84:16:

   84 |         line = (line + pad(i)) // '  '
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/additive-primes.f90:87:34:

   87 |           print *, line(0+1:(size(line) - 2))
      |                                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
