tests/rosetta/out/Fortran/additive-primes.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program additive_primes
  implicit none
    integer :: d
    integer :: s
    integer :: x
      character(len=100) :: s0
      character(len=100) :: s1
    character(len=100) :: s2
    integer :: count
    character(len=100) :: line
    integer :: lineCount
    integer :: i
    character(len=100) :: s3
  call main()
  
  contains
  recursive logical function isPrime(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = .false.
      return
    end if
    if ((mod(n,2) == 0)) then
      res = (n == 2)
      return
    end if
    if ((mod(n,3) == 0)) then
      res = (n == 3)
      return
    end if
    d = 5
    do while (((d * d) <= n))
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 2)
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 4)
    end do
    res = .true.
    return
  end function isPrime
  recursive integer function sumDigits(n) result(res)
    integer, intent(in) :: n
    s = 0
    x = n
    do while ((x > 0))
      s = mod((s + x),10)
      x = int(((x / 10)))
    end do
    res = s
    return
  end function sumDigits
  recursive character(len=100) function pad(n) result(res)
    integer, intent(in) :: n
    if ((n < 10)) then
      write(s0,'(G0)') n
      res = '  ' // s0
      return
    end if
    if ((n < 100)) then
      write(s1,'(G0)') n
      res = ' ' // s1
      return
    end if
    write(s2,'(G0)') n
    res = s2
    return
  end function pad
  recursive subroutine main()
    print *, 'Additive primes less than 500:'
    count = 0
    line = ''
    lineCount = 0
    i = 2
    do while ((i < 500))
      if ((isPrime(i) .and. isPrime(sumDigits(i)))) then
        count = (count + 1)
        line = (line + pad(i)) // '  '
        lineCount = (lineCount + 1)
        if ((lineCount == 10)) then
          print *, line(0+1:(size(line) - 2))
          line = ''
          lineCount = 0
        end if
      end if
      if ((i > 2)) then
        i = (i + 2)
      else
        i = (i + 1)
      end if
    end do
    if ((lineCount > 0)) then
      print *, line(0+1:(0 - 2))
    end if
    write(s3,'(G0)') count
    print *, s3 // ' additive primes found.'
  end subroutine main
end program additive_primes
